# python-pkg-notebook

./: .gitignore  README.rst  pyproject.toml
doc/: conf.py  index.rst
docs/: conf.py  index.rst
examples/: README.rst
examples/1_howto/: example.ipynb  example.py  example_data.py  mock_data.py
test/: test_mypackage.py
